// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.pp1igez,html.pp1igez body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="fhvdvb0 _1jibnum18 _1jibnum1b">
+        <div class="p93oyg0 pp1ige7i pp1ige6e pp1ige9q pp1ige8m pp1ige5e _1jibnum18 _1jibnum1b pp1ige32 pp1ige35">
+          <span class="p93oyg0 pp1ige4y _1jibnum0 _1jibnum1 _1jibnum21 _1d0g9qk4 _1jibnumd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .p93oyg0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .p93oyg0 {
  outline: none;
}
.p93oyg1 {
  display: block;
}
.p93oyg2 {
  line-height: 1;
}
.p93oyg3 {
  list-style: none;
}
.p93oyg4 {
  quotes: none;
}
.p93oyg4:after,
.p93oyg4:before {
  content: "";
}
.p93oyg5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.p93oyg6 {
  -webkit-appearance: none;
  appearance: none;
}
.p93oyg7 {
  background-color: transparent;
}
.p93oyg9 {
  color: inherit;
}
.p93oyga:disabled {
  opacity: 1;
}
.p93oyga::-ms-expand {
  display: none;
}
.p93oygc[type="number"] {
  -moz-appearance: textfield;
}
.p93oygc[type="number"]::-webkit-inner-spin-button,
.p93oygc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.p93oygc::-ms-clear {
  display: none;
}
.p93oygc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.p93oygf {
  color: inherit;
  text-decoration: none;
}
._1d0g9qk4 {
  font-size: var(--_1d0g9qk0);
  line-height: var(--_1d0g9qk1);
}
._1d0g9qk4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1d0g9qk2);
}
._1d0g9qk4:after {
  content: "";
  display: table;
  margin-top: var(--_1d0g9qk3);
}
.pp1ige0 {
  overflow: hidden;
}
.pp1ige1 {
  overflow: scroll;
}
.pp1ige2 {
  overflow: visible;
}
.pp1ige3 {
  overflow: auto;
}
.pp1ige4 {
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.pp1ige5 {
  outline: none;
}
.pp1ige6 {
  opacity: 0;
}
.pp1ige7 {
  z-index: 0;
}
.pp1ige8 {
  z-index: 1;
}
.pp1ige9 {
  z-index: 2;
}
.pp1igea {
  z-index: 90;
}
.pp1igeb {
  z-index: 100;
}
.pp1igec {
  z-index: 200;
}
.pp1iged {
  z-index: 290;
}
.pp1igee {
  z-index: 300;
}
.pp1igef {
  z-index: 400;
}
.pp1igeg {
  cursor: default;
}
.pp1igeh {
  cursor: pointer;
}
.pp1igei {
  pointer-events: none;
}
.pp1igej {
  top: 0;
}
.pp1igek {
  bottom: 0;
}
.pp1igel {
  left: 0;
}
.pp1igem {
  right: 0;
}
.pp1igen {
  height: 100%;
}
.pp1igeo {
  height: var(--coosf19);
}
.pp1igep {
  width: 100%;
}
.pp1igeq {
  width: var(--coosf19);
}
.pp1iger {
  min-width: 0;
}
.pp1iges {
  max-width: var(--coosf111);
}
.pp1iget {
  max-width: var(--coosf112);
}
.pp1igeu {
  max-width: var(--coosf113);
}
.pp1igev {
  max-width: var(--coosf114);
}
.pp1igew {
  transition: var(--coosf15i);
}
.pp1igex {
  transition: var(--coosf15j);
}
.pp1igey:active {
  transform: var(--coosf15k);
}
html.pp1igez .pp1ige11,
html:not(.pp1igez) .pp1ige10 {
  background: var(--coosf11t);
}
html.pp1igez .pp1ige13,
html:not(.pp1igez) .pp1ige12 {
  background: var(--coosf11u);
}
html.pp1igez .pp1ige15,
html:not(.pp1igez) .pp1ige14 {
  background: var(--coosf11v);
}
html.pp1igez .pp1ige17,
html:not(.pp1igez) .pp1ige16 {
  background: var(--coosf11w);
}
html.pp1igez .pp1ige19,
html:not(.pp1igez) .pp1ige18 {
  background: var(--coosf11x);
}
html.pp1igez .pp1ige1b,
html:not(.pp1igez) .pp1ige1a {
  background: var(--coosf11y);
}
html.pp1igez .pp1ige1d,
html:not(.pp1igez) .pp1ige1c {
  background: var(--coosf11z);
}
html.pp1igez .pp1ige1f,
html:not(.pp1igez) .pp1ige1e {
  background: var(--coosf120);
}
html.pp1igez .pp1ige1h,
html:not(.pp1igez) .pp1ige1g {
  background: var(--coosf121);
}
html.pp1igez .pp1ige1j,
html:not(.pp1igez) .pp1ige1i {
  background: var(--coosf122);
}
html.pp1igez .pp1ige1l,
html:not(.pp1igez) .pp1ige1k {
  background: var(--coosf123);
}
html.pp1igez .pp1ige1n,
html:not(.pp1igez) .pp1ige1m {
  background: var(--coosf124);
}
html.pp1igez .pp1ige1p,
html:not(.pp1igez) .pp1ige1o {
  background: var(--coosf125);
}
html.pp1igez .pp1ige1r,
html:not(.pp1igez) .pp1ige1q {
  background: var(--coosf126);
}
html.pp1igez .pp1ige1t,
html:not(.pp1igez) .pp1ige1s {
  background: var(--coosf127);
}
html.pp1igez .pp1ige1v,
html:not(.pp1igez) .pp1ige1u {
  background: var(--coosf128);
}
html.pp1igez .pp1ige1x,
html:not(.pp1igez) .pp1ige1w {
  background: var(--coosf129);
}
html.pp1igez .pp1ige1z,
html:not(.pp1igez) .pp1ige1y {
  background: var(--coosf12a);
}
html.pp1igez .pp1ige21,
html:not(.pp1igez) .pp1ige20 {
  background: var(--coosf12b);
}
html.pp1igez .pp1ige23,
html:not(.pp1igez) .pp1ige22 {
  background: var(--coosf12c);
}
html.pp1igez .pp1ige25,
html:not(.pp1igez) .pp1ige24 {
  background: var(--coosf12d);
}
html.pp1igez .pp1ige27,
html:not(.pp1igez) .pp1ige26 {
  background: var(--coosf12e);
}
html.pp1igez .pp1ige29,
html:not(.pp1igez) .pp1ige28 {
  background: var(--coosf12f);
}
html.pp1igez .pp1ige2b,
html:not(.pp1igez) .pp1ige2a {
  background: var(--coosf12g);
}
html.pp1igez .pp1ige2d,
html:not(.pp1igez) .pp1ige2c {
  background: var(--coosf12h);
}
html.pp1igez .pp1ige2f,
html:not(.pp1igez) .pp1ige2e {
  background: var(--coosf12i);
}
html.pp1igez .pp1ige2h,
html:not(.pp1igez) .pp1ige2g {
  background: var(--coosf12j);
}
html.pp1igez .pp1ige2j,
html:not(.pp1igez) .pp1ige2i {
  background: var(--coosf12k);
}
html.pp1igez .pp1ige2l,
html:not(.pp1igez) .pp1ige2k {
  background: var(--coosf12l);
}
html.pp1igez .pp1ige2n,
html:not(.pp1igez) .pp1ige2m {
  background: var(--coosf12m);
}
html.pp1igez .pp1ige2p,
html:not(.pp1igez) .pp1ige2o {
  background: var(--coosf12n);
}
html.pp1igez .pp1ige2r,
html:not(.pp1igez) .pp1ige2q {
  background: var(--coosf12o);
}
html.pp1igez .pp1ige2t,
html:not(.pp1igez) .pp1ige2s {
  background: var(--coosf12p);
}
html.pp1igez .pp1ige2v,
html:not(.pp1igez) .pp1ige2u {
  background: var(--coosf12q);
}
html.pp1igez .pp1ige2x,
html:not(.pp1igez) .pp1ige2w {
  background: var(--coosf12r);
}
html.pp1igez .pp1ige2z,
html:not(.pp1igez) .pp1ige2y {
  background: var(--coosf12s);
}
html.pp1igez .pp1ige31,
html:not(.pp1igez) .pp1ige30 {
  background: var(--coosf12t);
}
html.pp1igez .pp1ige33,
html:not(.pp1igez) .pp1ige32 {
  background: var(--coosf12u);
}
html.pp1igez .pp1ige35,
html:not(.pp1igez) .pp1ige34 {
  background: var(--coosf12v);
}
html.pp1igez .pp1ige37,
html:not(.pp1igez) .pp1ige36 {
  box-shadow: var(--coosf15l);
}
html.pp1igez .pp1ige39,
html:not(.pp1igez) .pp1ige38 {
  box-shadow: var(--coosf15m);
}
html.pp1igez .pp1ige3b,
html:not(.pp1igez) .pp1ige3a {
  box-shadow: var(--coosf15n);
}
html.pp1igez .pp1ige3d,
html:not(.pp1igez) .pp1ige3c {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1f);
}
html.pp1igez .pp1ige3f,
html:not(.pp1igez) .pp1ige3e {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1g);
}
html.pp1igez .pp1ige3h,
html:not(.pp1igez) .pp1ige3g {
  box-shadow: inset 0 0 0 var(--coosf1z) var(--coosf1f);
}
html.pp1igez .pp1ige3j,
html:not(.pp1igez) .pp1ige3i {
  box-shadow: inset 0 0 0 var(--coosf1z) var(--coosf1g);
}
html.pp1igez .pp1ige3l,
html:not(.pp1igez) .pp1ige3k {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1h);
}
html.pp1igez .pp1ige3n,
html:not(.pp1igez) .pp1ige3m {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1i);
}
html.pp1igez .pp1ige3p,
html:not(.pp1igez) .pp1ige3o {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1j);
}
html.pp1igez .pp1ige3r,
html:not(.pp1igez) .pp1ige3q {
  box-shadow: inset 0 0 0 var(--coosf1z) var(--coosf1j);
}
html.pp1igez .pp1ige3t,
html:not(.pp1igez) .pp1ige3s {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1k);
}
html.pp1igez .pp1ige3v,
html:not(.pp1igez) .pp1ige3u {
  box-shadow: inset 0 0 0 var(--coosf1z) var(--coosf1k);
}
html.pp1igez .pp1ige3x,
html:not(.pp1igez) .pp1ige3w {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1l);
}
html.pp1igez .pp1ige3z,
html:not(.pp1igez) .pp1ige3y {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1n);
}
html.pp1igez .pp1ige41,
html:not(.pp1igez) .pp1ige40 {
  box-shadow: inset 0 0 0 var(--coosf1z) var(--coosf1n);
}
html.pp1igez .pp1ige43,
html:not(.pp1igez) .pp1ige42 {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1o);
}
html.pp1igez .pp1ige45,
html:not(.pp1igez) .pp1ige44 {
  box-shadow: inset 0 0 0 var(--coosf1z) var(--coosf1o);
}
html.pp1igez .pp1ige47,
html:not(.pp1igez) .pp1ige46 {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1p);
}
html.pp1igez .pp1ige49,
html:not(.pp1igez) .pp1ige48 {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1q);
}
html.pp1igez .pp1ige4b,
html:not(.pp1igez) .pp1ige4a {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1r);
}
html.pp1igez .pp1ige4d,
html:not(.pp1igez) .pp1ige4c {
  box-shadow: inset 0 0 0 var(--coosf1z) var(--coosf1r);
}
html.pp1igez .pp1ige4f,
html:not(.pp1igez) .pp1ige4e {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1s);
}
html.pp1igez .pp1ige4h,
html:not(.pp1igez) .pp1ige4g {
  box-shadow: inset 0 0 0 var(--coosf1z) var(--coosf1s);
}
html.pp1igez .pp1ige4j,
html:not(.pp1igez) .pp1ige4i {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1t);
}
html.pp1igez .pp1ige4l,
html:not(.pp1igez) .pp1ige4k {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1u);
}
html.pp1igez .pp1ige4n,
html:not(.pp1igez) .pp1ige4m {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1v);
}
html.pp1igez .pp1ige4p,
html:not(.pp1igez) .pp1ige4o {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1w);
}
html.pp1igez .pp1ige4r,
html:not(.pp1igez) .pp1ige4q {
  box-shadow: inset 0 0 0 var(--coosf1y) var(--coosf1x);
}
html.pp1igez .pp1ige4t,
html:not(.pp1igez) .pp1ige4s {
  box-shadow: 0 0 0 var(--coosf110) var(--coosf1m);
}
.pp1ige4u {
  display: none;
}
.pp1ige4y {
  display: block;
}
.pp1ige52 {
  display: inline;
}
.pp1ige56 {
  display: inline-block;
}
.pp1ige5a {
  display: flex;
}
.pp1ige5e {
  position: relative;
}
.pp1ige5i {
  position: absolute;
}
.pp1ige5m {
  position: fixed;
}
.pp1ige5q {
  border-radius: 0;
}
.pp1ige5u {
  border-radius: 9999px;
}
.pp1ige5y {
  border-radius: var(--coosf1b);
}
.pp1ige62 {
  border-radius: var(--coosf1c);
}
.pp1ige66 {
  border-radius: var(--coosf1d);
}
.pp1ige6a {
  border-radius: var(--coosf1e);
}
.pp1ige6e {
  padding-top: var(--coosf10);
}
.pp1ige6i {
  padding-top: var(--coosf11);
}
.pp1ige6m {
  padding-top: var(--coosf12);
}
.pp1ige6q {
  padding-top: var(--coosf13);
}
.pp1ige6u {
  padding-top: var(--coosf14);
}
.pp1ige6y {
  padding-top: var(--coosf15);
}
.pp1ige72 {
  padding-top: var(--coosf16);
}
.pp1ige76 {
  padding-top: var(--coosf17);
}
.pp1ige7a {
  padding-top: var(--coosf18);
}
.pp1ige7e {
  padding-top: 0;
}
.pp1ige7i {
  padding-bottom: var(--coosf10);
}
.pp1ige7m {
  padding-bottom: var(--coosf11);
}
.pp1ige7q {
  padding-bottom: var(--coosf12);
}
.pp1ige7u {
  padding-bottom: var(--coosf13);
}
.pp1ige7y {
  padding-bottom: var(--coosf14);
}
.pp1ige82 {
  padding-bottom: var(--coosf15);
}
.pp1ige86 {
  padding-bottom: var(--coosf16);
}
.pp1ige8a {
  padding-bottom: var(--coosf17);
}
.pp1ige8e {
  padding-bottom: var(--coosf18);
}
.pp1ige8i {
  padding-bottom: 0;
}
.pp1ige8m {
  padding-right: var(--coosf10);
}
.pp1ige8q {
  padding-right: var(--coosf11);
}
.pp1ige8u {
  padding-right: var(--coosf12);
}
.pp1ige8y {
  padding-right: var(--coosf13);
}
.pp1ige92 {
  padding-right: var(--coosf14);
}
.pp1ige96 {
  padding-right: var(--coosf15);
}
.pp1ige9a {
  padding-right: var(--coosf16);
}
.pp1ige9e {
  padding-right: var(--coosf17);
}
.pp1ige9i {
  padding-right: var(--coosf18);
}
.pp1ige9m {
  padding-right: 0;
}
.pp1ige9q {
  padding-left: var(--coosf10);
}
.pp1ige9u {
  padding-left: var(--coosf11);
}
.pp1ige9y {
  padding-left: var(--coosf12);
}
.pp1igea2 {
  padding-left: var(--coosf13);
}
.pp1igea6 {
  padding-left: var(--coosf14);
}
.pp1igeaa {
  padding-left: var(--coosf15);
}
.pp1igeae {
  padding-left: var(--coosf16);
}
.pp1igeai {
  padding-left: var(--coosf17);
}
.pp1igeam {
  padding-left: var(--coosf18);
}
.pp1igeaq {
  padding-left: 0;
}
.pp1igeau {
  margin-top: var(--coosf10);
}
.pp1igeay {
  margin-top: var(--coosf11);
}
.pp1igeb2 {
  margin-top: var(--coosf12);
}
.pp1igeb6 {
  margin-top: var(--coosf13);
}
.pp1igeba {
  margin-top: var(--coosf14);
}
.pp1igebe {
  margin-top: var(--coosf15);
}
.pp1igebi {
  margin-top: var(--coosf16);
}
.pp1igebm {
  margin-top: var(--coosf17);
}
.pp1igebq {
  margin-top: var(--coosf18);
}
.pp1igebu {
  margin-top: 0;
}
.pp1igeby {
  margin-bottom: var(--coosf10);
}
.pp1igec2 {
  margin-bottom: var(--coosf11);
}
.pp1igec6 {
  margin-bottom: var(--coosf12);
}
.pp1igeca {
  margin-bottom: var(--coosf13);
}
.pp1igece {
  margin-bottom: var(--coosf14);
}
.pp1igeci {
  margin-bottom: var(--coosf15);
}
.pp1igecm {
  margin-bottom: var(--coosf16);
}
.pp1igecq {
  margin-bottom: var(--coosf17);
}
.pp1igecu {
  margin-bottom: var(--coosf18);
}
.pp1igecy {
  margin-bottom: 0;
}
.pp1iged2 {
  margin-right: var(--coosf10);
}
.pp1iged6 {
  margin-right: var(--coosf11);
}
.pp1igeda {
  margin-right: var(--coosf12);
}
.pp1igede {
  margin-right: var(--coosf13);
}
.pp1igedi {
  margin-right: var(--coosf14);
}
.pp1igedm {
  margin-right: var(--coosf15);
}
.pp1igedq {
  margin-right: var(--coosf16);
}
.pp1igedu {
  margin-right: var(--coosf17);
}
.pp1igedy {
  margin-right: var(--coosf18);
}
.pp1igee2 {
  margin-right: 0;
}
.pp1igee6 {
  margin-left: var(--coosf10);
}
.pp1igeea {
  margin-left: var(--coosf11);
}
.pp1igeee {
  margin-left: var(--coosf12);
}
.pp1igeei {
  margin-left: var(--coosf13);
}
.pp1igeem {
  margin-left: var(--coosf14);
}
.pp1igeeq {
  margin-left: var(--coosf15);
}
.pp1igeeu {
  margin-left: var(--coosf16);
}
.pp1igeey {
  margin-left: var(--coosf17);
}
.pp1igef2 {
  margin-left: var(--coosf18);
}
.pp1igef6 {
  margin-left: 0;
}
.pp1igefa {
  align-items: flex-start;
}
.pp1igefe {
  align-items: center;
}
.pp1igefi {
  align-items: flex-end;
}
.pp1igefm {
  justify-content: flex-start;
}
.pp1igefq {
  justify-content: center;
}
.pp1igefu {
  justify-content: flex-end;
}
.pp1igefy {
  justify-content: space-between;
}
.pp1igeg2 {
  flex-direction: row;
}
.pp1igeg6 {
  flex-direction: row-reverse;
}
.pp1igega {
  flex-direction: column;
}
.pp1igege {
  flex-direction: column-reverse;
}
.pp1igegi {
  flex-wrap: wrap;
}
.pp1igegm {
  flex-wrap: nowrap;
}
.pp1igegq {
  flex-shrink: 0;
}
.pp1igegu {
  flex-grow: 0;
}
.pp1igegy {
  flex-grow: 1;
}
.pp1igeh2 {
  text-align: left;
}
.pp1igeh6 {
  text-align: center;
}
.pp1igeha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  .pp1ige4v {
    display: none;
  }
  .pp1ige4z {
    display: block;
  }
  .pp1ige53 {
    display: inline;
  }
  .pp1ige57 {
    display: inline-block;
  }
  .pp1ige5b {
    display: flex;
  }
  .pp1ige5f {
    position: relative;
  }
  .pp1ige5j {
    position: absolute;
  }
  .pp1ige5n {
    position: fixed;
  }
  .pp1ige5r {
    border-radius: 0;
  }
  .pp1ige5v {
    border-radius: 9999px;
  }
  .pp1ige5z {
    border-radius: var(--coosf1b);
  }
  .pp1ige63 {
    border-radius: var(--coosf1c);
  }
  .pp1ige67 {
    border-radius: var(--coosf1d);
  }
  .pp1ige6b {
    border-radius: var(--coosf1e);
  }
  .pp1ige6f {
    padding-top: var(--coosf10);
  }
  .pp1ige6j {
    padding-top: var(--coosf11);
  }
  .pp1ige6n {
    padding-top: var(--coosf12);
  }
  .pp1ige6r {
    padding-top: var(--coosf13);
  }
  .pp1ige6v {
    padding-top: var(--coosf14);
  }
  .pp1ige6z {
    padding-top: var(--coosf15);
  }
  .pp1ige73 {
    padding-top: var(--coosf16);
  }
  .pp1ige77 {
    padding-top: var(--coosf17);
  }
  .pp1ige7b {
    padding-top: var(--coosf18);
  }
  .pp1ige7f {
    padding-top: 0;
  }
  .pp1ige7j {
    padding-bottom: var(--coosf10);
  }
  .pp1ige7n {
    padding-bottom: var(--coosf11);
  }
  .pp1ige7r {
    padding-bottom: var(--coosf12);
  }
  .pp1ige7v {
    padding-bottom: var(--coosf13);
  }
  .pp1ige7z {
    padding-bottom: var(--coosf14);
  }
  .pp1ige83 {
    padding-bottom: var(--coosf15);
  }
  .pp1ige87 {
    padding-bottom: var(--coosf16);
  }
  .pp1ige8b {
    padding-bottom: var(--coosf17);
  }
  .pp1ige8f {
    padding-bottom: var(--coosf18);
  }
  .pp1ige8j {
    padding-bottom: 0;
  }
  .pp1ige8n {
    padding-right: var(--coosf10);
  }
  .pp1ige8r {
    padding-right: var(--coosf11);
  }
  .pp1ige8v {
    padding-right: var(--coosf12);
  }
  .pp1ige8z {
    padding-right: var(--coosf13);
  }
  .pp1ige93 {
    padding-right: var(--coosf14);
  }
  .pp1ige97 {
    padding-right: var(--coosf15);
  }
  .pp1ige9b {
    padding-right: var(--coosf16);
  }
  .pp1ige9f {
    padding-right: var(--coosf17);
  }
  .pp1ige9j {
    padding-right: var(--coosf18);
  }
  .pp1ige9n {
    padding-right: 0;
  }
  .pp1ige9r {
    padding-left: var(--coosf10);
  }
  .pp1ige9v {
    padding-left: var(--coosf11);
  }
  .pp1ige9z {
    padding-left: var(--coosf12);
  }
  .pp1igea3 {
    padding-left: var(--coosf13);
  }
  .pp1igea7 {
    padding-left: var(--coosf14);
  }
  .pp1igeab {
    padding-left: var(--coosf15);
  }
  .pp1igeaf {
    padding-left: var(--coosf16);
  }
  .pp1igeaj {
    padding-left: var(--coosf17);
  }
  .pp1igean {
    padding-left: var(--coosf18);
  }
  .pp1igear {
    padding-left: 0;
  }
  .pp1igeav {
    margin-top: var(--coosf10);
  }
  .pp1igeaz {
    margin-top: var(--coosf11);
  }
  .pp1igeb3 {
    margin-top: var(--coosf12);
  }
  .pp1igeb7 {
    margin-top: var(--coosf13);
  }
  .pp1igebb {
    margin-top: var(--coosf14);
  }
  .pp1igebf {
    margin-top: var(--coosf15);
  }
  .pp1igebj {
    margin-top: var(--coosf16);
  }
  .pp1igebn {
    margin-top: var(--coosf17);
  }
  .pp1igebr {
    margin-top: var(--coosf18);
  }
  .pp1igebv {
    margin-top: 0;
  }
  .pp1igebz {
    margin-bottom: var(--coosf10);
  }
  .pp1igec3 {
    margin-bottom: var(--coosf11);
  }
  .pp1igec7 {
    margin-bottom: var(--coosf12);
  }
  .pp1igecb {
    margin-bottom: var(--coosf13);
  }
  .pp1igecf {
    margin-bottom: var(--coosf14);
  }
  .pp1igecj {
    margin-bottom: var(--coosf15);
  }
  .pp1igecn {
    margin-bottom: var(--coosf16);
  }
  .pp1igecr {
    margin-bottom: var(--coosf17);
  }
  .pp1igecv {
    margin-bottom: var(--coosf18);
  }
  .pp1igecz {
    margin-bottom: 0;
  }
  .pp1iged3 {
    margin-right: var(--coosf10);
  }
  .pp1iged7 {
    margin-right: var(--coosf11);
  }
  .pp1igedb {
    margin-right: var(--coosf12);
  }
  .pp1igedf {
    margin-right: var(--coosf13);
  }
  .pp1igedj {
    margin-right: var(--coosf14);
  }
  .pp1igedn {
    margin-right: var(--coosf15);
  }
  .pp1igedr {
    margin-right: var(--coosf16);
  }
  .pp1igedv {
    margin-right: var(--coosf17);
  }
  .pp1igedz {
    margin-right: var(--coosf18);
  }
  .pp1igee3 {
    margin-right: 0;
  }
  .pp1igee7 {
    margin-left: var(--coosf10);
  }
  .pp1igeeb {
    margin-left: var(--coosf11);
  }
  .pp1igeef {
    margin-left: var(--coosf12);
  }
  .pp1igeej {
    margin-left: var(--coosf13);
  }
  .pp1igeen {
    margin-left: var(--coosf14);
  }
  .pp1igeer {
    margin-left: var(--coosf15);
  }
  .pp1igeev {
    margin-left: var(--coosf16);
  }
  .pp1igeez {
    margin-left: var(--coosf17);
  }
  .pp1igef3 {
    margin-left: var(--coosf18);
  }
  .pp1igef7 {
    margin-left: 0;
  }
  .pp1igefb {
    align-items: flex-start;
  }
  .pp1igeff {
    align-items: center;
  }
  .pp1igefj {
    align-items: flex-end;
  }
  .pp1igefn {
    justify-content: flex-start;
  }
  .pp1igefr {
    justify-content: center;
  }
  .pp1igefv {
    justify-content: flex-end;
  }
  .pp1igefz {
    justify-content: space-between;
  }
  .pp1igeg3 {
    flex-direction: row;
  }
  .pp1igeg7 {
    flex-direction: row-reverse;
  }
  .pp1igegb {
    flex-direction: column;
  }
  .pp1igegf {
    flex-direction: column-reverse;
  }
  .pp1igegj {
    flex-wrap: wrap;
  }
  .pp1igegn {
    flex-wrap: nowrap;
  }
  .pp1igegr {
    flex-shrink: 0;
  }
  .pp1igegv {
    flex-grow: 0;
  }
  .pp1igegz {
    flex-grow: 1;
  }
  .pp1igeh3 {
    text-align: left;
  }
  .pp1igeh7 {
    text-align: center;
  }
  .pp1igehb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  .pp1ige4w {
    display: none;
  }
  .pp1ige50 {
    display: block;
  }
  .pp1ige54 {
    display: inline;
  }
  .pp1ige58 {
    display: inline-block;
  }
  .pp1ige5c {
    display: flex;
  }
  .pp1ige5g {
    position: relative;
  }
  .pp1ige5k {
    position: absolute;
  }
  .pp1ige5o {
    position: fixed;
  }
  .pp1ige5s {
    border-radius: 0;
  }
  .pp1ige5w {
    border-radius: 9999px;
  }
  .pp1ige60 {
    border-radius: var(--coosf1b);
  }
  .pp1ige64 {
    border-radius: var(--coosf1c);
  }
  .pp1ige68 {
    border-radius: var(--coosf1d);
  }
  .pp1ige6c {
    border-radius: var(--coosf1e);
  }
  .pp1ige6g {
    padding-top: var(--coosf10);
  }
  .pp1ige6k {
    padding-top: var(--coosf11);
  }
  .pp1ige6o {
    padding-top: var(--coosf12);
  }
  .pp1ige6s {
    padding-top: var(--coosf13);
  }
  .pp1ige6w {
    padding-top: var(--coosf14);
  }
  .pp1ige70 {
    padding-top: var(--coosf15);
  }
  .pp1ige74 {
    padding-top: var(--coosf16);
  }
  .pp1ige78 {
    padding-top: var(--coosf17);
  }
  .pp1ige7c {
    padding-top: var(--coosf18);
  }
  .pp1ige7g {
    padding-top: 0;
  }
  .pp1ige7k {
    padding-bottom: var(--coosf10);
  }
  .pp1ige7o {
    padding-bottom: var(--coosf11);
  }
  .pp1ige7s {
    padding-bottom: var(--coosf12);
  }
  .pp1ige7w {
    padding-bottom: var(--coosf13);
  }
  .pp1ige80 {
    padding-bottom: var(--coosf14);
  }
  .pp1ige84 {
    padding-bottom: var(--coosf15);
  }
  .pp1ige88 {
    padding-bottom: var(--coosf16);
  }
  .pp1ige8c {
    padding-bottom: var(--coosf17);
  }
  .pp1ige8g {
    padding-bottom: var(--coosf18);
  }
  .pp1ige8k {
    padding-bottom: 0;
  }
  .pp1ige8o {
    padding-right: var(--coosf10);
  }
  .pp1ige8s {
    padding-right: var(--coosf11);
  }
  .pp1ige8w {
    padding-right: var(--coosf12);
  }
  .pp1ige90 {
    padding-right: var(--coosf13);
  }
  .pp1ige94 {
    padding-right: var(--coosf14);
  }
  .pp1ige98 {
    padding-right: var(--coosf15);
  }
  .pp1ige9c {
    padding-right: var(--coosf16);
  }
  .pp1ige9g {
    padding-right: var(--coosf17);
  }
  .pp1ige9k {
    padding-right: var(--coosf18);
  }
  .pp1ige9o {
    padding-right: 0;
  }
  .pp1ige9s {
    padding-left: var(--coosf10);
  }
  .pp1ige9w {
    padding-left: var(--coosf11);
  }
  .pp1igea0 {
    padding-left: var(--coosf12);
  }
  .pp1igea4 {
    padding-left: var(--coosf13);
  }
  .pp1igea8 {
    padding-left: var(--coosf14);
  }
  .pp1igeac {
    padding-left: var(--coosf15);
  }
  .pp1igeag {
    padding-left: var(--coosf16);
  }
  .pp1igeak {
    padding-left: var(--coosf17);
  }
  .pp1igeao {
    padding-left: var(--coosf18);
  }
  .pp1igeas {
    padding-left: 0;
  }
  .pp1igeaw {
    margin-top: var(--coosf10);
  }
  .pp1igeb0 {
    margin-top: var(--coosf11);
  }
  .pp1igeb4 {
    margin-top: var(--coosf12);
  }
  .pp1igeb8 {
    margin-top: var(--coosf13);
  }
  .pp1igebc {
    margin-top: var(--coosf14);
  }
  .pp1igebg {
    margin-top: var(--coosf15);
  }
  .pp1igebk {
    margin-top: var(--coosf16);
  }
  .pp1igebo {
    margin-top: var(--coosf17);
  }
  .pp1igebs {
    margin-top: var(--coosf18);
  }
  .pp1igebw {
    margin-top: 0;
  }
  .pp1igec0 {
    margin-bottom: var(--coosf10);
  }
  .pp1igec4 {
    margin-bottom: var(--coosf11);
  }
  .pp1igec8 {
    margin-bottom: var(--coosf12);
  }
  .pp1igecc {
    margin-bottom: var(--coosf13);
  }
  .pp1igecg {
    margin-bottom: var(--coosf14);
  }
  .pp1igeck {
    margin-bottom: var(--coosf15);
  }
  .pp1igeco {
    margin-bottom: var(--coosf16);
  }
  .pp1igecs {
    margin-bottom: var(--coosf17);
  }
  .pp1igecw {
    margin-bottom: var(--coosf18);
  }
  .pp1iged0 {
    margin-bottom: 0;
  }
  .pp1iged4 {
    margin-right: var(--coosf10);
  }
  .pp1iged8 {
    margin-right: var(--coosf11);
  }
  .pp1igedc {
    margin-right: var(--coosf12);
  }
  .pp1igedg {
    margin-right: var(--coosf13);
  }
  .pp1igedk {
    margin-right: var(--coosf14);
  }
  .pp1igedo {
    margin-right: var(--coosf15);
  }
  .pp1igeds {
    margin-right: var(--coosf16);
  }
  .pp1igedw {
    margin-right: var(--coosf17);
  }
  .pp1igee0 {
    margin-right: var(--coosf18);
  }
  .pp1igee4 {
    margin-right: 0;
  }
  .pp1igee8 {
    margin-left: var(--coosf10);
  }
  .pp1igeec {
    margin-left: var(--coosf11);
  }
  .pp1igeeg {
    margin-left: var(--coosf12);
  }
  .pp1igeek {
    margin-left: var(--coosf13);
  }
  .pp1igeeo {
    margin-left: var(--coosf14);
  }
  .pp1igees {
    margin-left: var(--coosf15);
  }
  .pp1igeew {
    margin-left: var(--coosf16);
  }
  .pp1igef0 {
    margin-left: var(--coosf17);
  }
  .pp1igef4 {
    margin-left: var(--coosf18);
  }
  .pp1igef8 {
    margin-left: 0;
  }
  .pp1igefc {
    align-items: flex-start;
  }
  .pp1igefg {
    align-items: center;
  }
  .pp1igefk {
    align-items: flex-end;
  }
  .pp1igefo {
    justify-content: flex-start;
  }
  .pp1igefs {
    justify-content: center;
  }
  .pp1igefw {
    justify-content: flex-end;
  }
  .pp1igeg0 {
    justify-content: space-between;
  }
  .pp1igeg4 {
    flex-direction: row;
  }
  .pp1igeg8 {
    flex-direction: row-reverse;
  }
  .pp1igegc {
    flex-direction: column;
  }
  .pp1igegg {
    flex-direction: column-reverse;
  }
  .pp1igegk {
    flex-wrap: wrap;
  }
  .pp1igego {
    flex-wrap: nowrap;
  }
  .pp1igegs {
    flex-shrink: 0;
  }
  .pp1igegw {
    flex-grow: 0;
  }
  .pp1igeh0 {
    flex-grow: 1;
  }
  .pp1igeh4 {
    text-align: left;
  }
  .pp1igeh8 {
    text-align: center;
  }
  .pp1igehc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  .pp1ige4x {
    display: none;
  }
  .pp1ige51 {
    display: block;
  }
  .pp1ige55 {
    display: inline;
  }
  .pp1ige59 {
    display: inline-block;
  }
  .pp1ige5d {
    display: flex;
  }
  .pp1ige5h {
    position: relative;
  }
  .pp1ige5l {
    position: absolute;
  }
  .pp1ige5p {
    position: fixed;
  }
  .pp1ige5t {
    border-radius: 0;
  }
  .pp1ige5x {
    border-radius: 9999px;
  }
  .pp1ige61 {
    border-radius: var(--coosf1b);
  }
  .pp1ige65 {
    border-radius: var(--coosf1c);
  }
  .pp1ige69 {
    border-radius: var(--coosf1d);
  }
  .pp1ige6d {
    border-radius: var(--coosf1e);
  }
  .pp1ige6h {
    padding-top: var(--coosf10);
  }
  .pp1ige6l {
    padding-top: var(--coosf11);
  }
  .pp1ige6p {
    padding-top: var(--coosf12);
  }
  .pp1ige6t {
    padding-top: var(--coosf13);
  }
  .pp1ige6x {
    padding-top: var(--coosf14);
  }
  .pp1ige71 {
    padding-top: var(--coosf15);
  }
  .pp1ige75 {
    padding-top: var(--coosf16);
  }
  .pp1ige79 {
    padding-top: var(--coosf17);
  }
  .pp1ige7d {
    padding-top: var(--coosf18);
  }
  .pp1ige7h {
    padding-top: 0;
  }
  .pp1ige7l {
    padding-bottom: var(--coosf10);
  }
  .pp1ige7p {
    padding-bottom: var(--coosf11);
  }
  .pp1ige7t {
    padding-bottom: var(--coosf12);
  }
  .pp1ige7x {
    padding-bottom: var(--coosf13);
  }
  .pp1ige81 {
    padding-bottom: var(--coosf14);
  }
  .pp1ige85 {
    padding-bottom: var(--coosf15);
  }
  .pp1ige89 {
    padding-bottom: var(--coosf16);
  }
  .pp1ige8d {
    padding-bottom: var(--coosf17);
  }
  .pp1ige8h {
    padding-bottom: var(--coosf18);
  }
  .pp1ige8l {
    padding-bottom: 0;
  }
  .pp1ige8p {
    padding-right: var(--coosf10);
  }
  .pp1ige8t {
    padding-right: var(--coosf11);
  }
  .pp1ige8x {
    padding-right: var(--coosf12);
  }
  .pp1ige91 {
    padding-right: var(--coosf13);
  }
  .pp1ige95 {
    padding-right: var(--coosf14);
  }
  .pp1ige99 {
    padding-right: var(--coosf15);
  }
  .pp1ige9d {
    padding-right: var(--coosf16);
  }
  .pp1ige9h {
    padding-right: var(--coosf17);
  }
  .pp1ige9l {
    padding-right: var(--coosf18);
  }
  .pp1ige9p {
    padding-right: 0;
  }
  .pp1ige9t {
    padding-left: var(--coosf10);
  }
  .pp1ige9x {
    padding-left: var(--coosf11);
  }
  .pp1igea1 {
    padding-left: var(--coosf12);
  }
  .pp1igea5 {
    padding-left: var(--coosf13);
  }
  .pp1igea9 {
    padding-left: var(--coosf14);
  }
  .pp1igead {
    padding-left: var(--coosf15);
  }
  .pp1igeah {
    padding-left: var(--coosf16);
  }
  .pp1igeal {
    padding-left: var(--coosf17);
  }
  .pp1igeap {
    padding-left: var(--coosf18);
  }
  .pp1igeat {
    padding-left: 0;
  }
  .pp1igeax {
    margin-top: var(--coosf10);
  }
  .pp1igeb1 {
    margin-top: var(--coosf11);
  }
  .pp1igeb5 {
    margin-top: var(--coosf12);
  }
  .pp1igeb9 {
    margin-top: var(--coosf13);
  }
  .pp1igebd {
    margin-top: var(--coosf14);
  }
  .pp1igebh {
    margin-top: var(--coosf15);
  }
  .pp1igebl {
    margin-top: var(--coosf16);
  }
  .pp1igebp {
    margin-top: var(--coosf17);
  }
  .pp1igebt {
    margin-top: var(--coosf18);
  }
  .pp1igebx {
    margin-top: 0;
  }
  .pp1igec1 {
    margin-bottom: var(--coosf10);
  }
  .pp1igec5 {
    margin-bottom: var(--coosf11);
  }
  .pp1igec9 {
    margin-bottom: var(--coosf12);
  }
  .pp1igecd {
    margin-bottom: var(--coosf13);
  }
  .pp1igech {
    margin-bottom: var(--coosf14);
  }
  .pp1igecl {
    margin-bottom: var(--coosf15);
  }
  .pp1igecp {
    margin-bottom: var(--coosf16);
  }
  .pp1igect {
    margin-bottom: var(--coosf17);
  }
  .pp1igecx {
    margin-bottom: var(--coosf18);
  }
  .pp1iged1 {
    margin-bottom: 0;
  }
  .pp1iged5 {
    margin-right: var(--coosf10);
  }
  .pp1iged9 {
    margin-right: var(--coosf11);
  }
  .pp1igedd {
    margin-right: var(--coosf12);
  }
  .pp1igedh {
    margin-right: var(--coosf13);
  }
  .pp1igedl {
    margin-right: var(--coosf14);
  }
  .pp1igedp {
    margin-right: var(--coosf15);
  }
  .pp1igedt {
    margin-right: var(--coosf16);
  }
  .pp1igedx {
    margin-right: var(--coosf17);
  }
  .pp1igee1 {
    margin-right: var(--coosf18);
  }
  .pp1igee5 {
    margin-right: 0;
  }
  .pp1igee9 {
    margin-left: var(--coosf10);
  }
  .pp1igeed {
    margin-left: var(--coosf11);
  }
  .pp1igeeh {
    margin-left: var(--coosf12);
  }
  .pp1igeel {
    margin-left: var(--coosf13);
  }
  .pp1igeep {
    margin-left: var(--coosf14);
  }
  .pp1igeet {
    margin-left: var(--coosf15);
  }
  .pp1igeex {
    margin-left: var(--coosf16);
  }
  .pp1igef1 {
    margin-left: var(--coosf17);
  }
  .pp1igef5 {
    margin-left: var(--coosf18);
  }
  .pp1igef9 {
    margin-left: 0;
  }
  .pp1igefd {
    align-items: flex-start;
  }
  .pp1igefh {
    align-items: center;
  }
  .pp1igefl {
    align-items: flex-end;
  }
  .pp1igefp {
    justify-content: flex-start;
  }
  .pp1igeft {
    justify-content: center;
  }
  .pp1igefx {
    justify-content: flex-end;
  }
  .pp1igeg1 {
    justify-content: space-between;
  }
  .pp1igeg5 {
    flex-direction: row;
  }
  .pp1igeg9 {
    flex-direction: row-reverse;
  }
  .pp1igegd {
    flex-direction: column;
  }
  .pp1igegh {
    flex-direction: column-reverse;
  }
  .pp1igegl {
    flex-wrap: wrap;
  }
  .pp1igegp {
    flex-wrap: nowrap;
  }
  .pp1igegt {
    flex-shrink: 0;
  }
  .pp1igegx {
    flex-grow: 0;
  }
  .pp1igeh1 {
    flex-grow: 1;
  }
  .pp1igeh5 {
    text-align: left;
  }
  .pp1igeh9 {
    text-align: center;
  }
  .pp1igehd {
    text-align: right;
  }
}
._1jibnum0 {
  font-family: var(--coosf12w);
}
._1jibnum1 {
  font-weight: var(--coosf146);
}
._1jibnum2 {
  font-weight: var(--coosf147);
}
._1jibnum3 {
  font-weight: var(--coosf148);
}
._1jibnum4 {
  --_1d0g9qk0: var(--coosf132);
  --_1d0g9qk1: var(--coosf133);
  --_1d0g9qk2: var(--coosf135);
  --_1d0g9qk3: var(--coosf136);
}
._1jibnum7 {
  --_1d0g9qk0: var(--coosf13c);
  --_1d0g9qk1: var(--coosf13d);
  --_1d0g9qk2: var(--coosf13f);
  --_1d0g9qk3: var(--coosf13g);
}
._1jibnuma {
  --_1d0g9qk0: var(--coosf13m);
  --_1d0g9qk1: var(--coosf13n);
  --_1d0g9qk2: var(--coosf13p);
  --_1d0g9qk3: var(--coosf13q);
}
._1jibnumd {
  --_1d0g9qk0: var(--coosf13w);
  --_1d0g9qk1: var(--coosf13x);
  --_1d0g9qk2: var(--coosf13z);
  --_1d0g9qk3: var(--coosf140);
}
._1jibnumg {
  font-size: var(--coosf132);
  line-height: var(--coosf133);
}
._1jibnumh {
  font-size: var(--coosf13c);
  line-height: var(--coosf13d);
}
._1jibnumi {
  font-size: var(--coosf13m);
  line-height: var(--coosf13n);
}
._1jibnumj {
  font-size: var(--coosf13w);
  line-height: var(--coosf13x);
}
._1jibnumk {
  font-weight: var(--coosf15d);
}
._1jibnuml {
  font-weight: var(--coosf15e);
}
._1jibnumm {
  --_1d0g9qk0: var(--coosf149);
  --_1d0g9qk1: var(--coosf14a);
  --_1d0g9qk2: var(--coosf14c);
  --_1d0g9qk3: var(--coosf14d);
}
._1jibnump {
  --_1d0g9qk0: var(--coosf14j);
  --_1d0g9qk1: var(--coosf14k);
  --_1d0g9qk2: var(--coosf14m);
  --_1d0g9qk3: var(--coosf14n);
}
._1jibnums {
  --_1d0g9qk0: var(--coosf14t);
  --_1d0g9qk1: var(--coosf14u);
  --_1d0g9qk2: var(--coosf14w);
  --_1d0g9qk3: var(--coosf14x);
}
._1jibnumv {
  --_1d0g9qk0: var(--coosf153);
  --_1d0g9qk1: var(--coosf154);
  --_1d0g9qk2: var(--coosf156);
  --_1d0g9qk3: var(--coosf157);
}
html:not(.pp1igez) ._1jibnum18 {
  --_1jibnumy: var(--coosf119);
  --_1jibnumz: var(--coosf117);
  --_1jibnum10: var(--coosf11d);
  --_1jibnum11: var(--coosf11o);
  --_1jibnum12: var(--coosf11m);
  --_1jibnum13: var(--coosf115);
  --_1jibnum14: var(--coosf11b);
  --_1jibnum15: var(--coosf11k);
  --_1jibnum16: var(--coosf11r);
  --_1jibnum17: var(--coosf11f);
}
html:not(.pp1igez) ._1jibnum19 {
  --_1jibnumy: var(--coosf11a);
  --_1jibnumz: var(--coosf118);
  --_1jibnum10: var(--coosf11e);
  --_1jibnum11: var(--coosf11p);
  --_1jibnum12: var(--coosf11n);
  --_1jibnum13: var(--coosf116);
  --_1jibnum14: var(--coosf11c);
  --_1jibnum15: var(--coosf11l);
  --_1jibnum16: var(--coosf11s);
  --_1jibnum17: var(--coosf11h);
}
html.pp1igez ._1jibnum1a {
  --_1jibnumy: var(--coosf119);
  --_1jibnumz: var(--coosf117);
  --_1jibnum10: var(--coosf11d);
  --_1jibnum11: var(--coosf11o);
  --_1jibnum12: var(--coosf11m);
  --_1jibnum13: var(--coosf115);
  --_1jibnum14: var(--coosf11b);
  --_1jibnum15: var(--coosf11k);
  --_1jibnum16: var(--coosf11r);
  --_1jibnum17: var(--coosf11f);
}
html.pp1igez ._1jibnum1b {
  --_1jibnumy: var(--coosf11a);
  --_1jibnumz: var(--coosf118);
  --_1jibnum10: var(--coosf11e);
  --_1jibnum11: var(--coosf11p);
  --_1jibnum12: var(--coosf11n);
  --_1jibnum13: var(--coosf116);
  --_1jibnum14: var(--coosf11c);
  --_1jibnum15: var(--coosf11l);
  --_1jibnum16: var(--coosf11s);
  --_1jibnum17: var(--coosf11h);
}
html:not(.pp1igez) ._1jibnum1c,
html:not(.pp1igez) ._1jibnum1d,
html:not(.pp1igez) ._1jibnum1e,
html:not(.pp1igez) ._1jibnum1f {
  --_1jibnum15: var(--_1jibnumy);
}
html:not(.pp1igez) ._1jibnum1g,
html:not(.pp1igez) ._1jibnum1h {
  --_1jibnum15: var(--_1jibnumz);
}
html:not(.pp1igez) ._1jibnum1i {
  --_1jibnum15: var(--_1jibnum12);
}
html:not(.pp1igez) ._1jibnum1j {
  --_1jibnum15: var(--_1jibnum10);
}
html:not(.pp1igez) ._1jibnum1k {
  --_1jibnum15: var(--_1jibnum11);
}
html.pp1igez ._1jibnum1l,
html.pp1igez ._1jibnum1m,
html.pp1igez ._1jibnum1n,
html.pp1igez ._1jibnum1o {
  --_1jibnum15: var(--_1jibnumy);
}
html.pp1igez ._1jibnum1p,
html.pp1igez ._1jibnum1q {
  --_1jibnum15: var(--_1jibnumz);
}
html.pp1igez ._1jibnum1r {
  --_1jibnum15: var(--_1jibnum12);
}
html.pp1igez ._1jibnum1s {
  --_1jibnum15: var(--_1jibnum10);
}
html.pp1igez ._1jibnum1t {
  --_1jibnum15: var(--_1jibnum11);
}
._1jibnum1u {
  color: var(--_1jibnumy);
}
._1jibnum1v {
  color: var(--_1jibnumz);
}
._1jibnum1w {
  color: var(--_1jibnum10);
}
._1jibnum1x {
  color: var(--_1jibnum11);
}
._1jibnum1y {
  color: var(--_1jibnum12);
}
._1jibnum1z {
  color: var(--_1jibnum13);
}
._1jibnum20 {
  color: var(--_1jibnum14);
}
._1jibnum21 {
  color: var(--_1jibnum15);
}
._1jibnum22 {
  color: var(--_1jibnum16);
}
._1jibnum23 {
  color: var(--_1jibnum17);
}
._1jibnum24 {
  padding-bottom: calc((var(--coosf19) - var(--coosf133)) / 2);
  padding-top: calc((var(--coosf19) - var(--coosf133)) / 2);
}
._1jibnum25 {
  padding-bottom: calc((var(--coosf19) - var(--coosf13d)) / 2);
  padding-top: calc((var(--coosf19) - var(--coosf13d)) / 2);
}
._1jibnum26 {
  padding-bottom: calc((var(--coosf19) - var(--coosf13n)) / 2);
  padding-top: calc((var(--coosf19) - var(--coosf13n)) / 2);
}
._1jibnum27 {
  padding-bottom: calc((var(--coosf19) - var(--coosf13x)) / 2);
  padding-top: calc((var(--coosf19) - var(--coosf13x)) / 2);
}
@media screen and (min-width: 740px) {
  ._1jibnum4 {
    --_1d0g9qk0: var(--coosf137);
    --_1d0g9qk1: var(--coosf138);
    --_1d0g9qk2: var(--coosf13a);
    --_1d0g9qk3: var(--coosf13b);
  }
  ._1jibnum7 {
    --_1d0g9qk0: var(--coosf13h);
    --_1d0g9qk1: var(--coosf13i);
    --_1d0g9qk2: var(--coosf13k);
    --_1d0g9qk3: var(--coosf13l);
  }
  ._1jibnuma {
    --_1d0g9qk0: var(--coosf13r);
    --_1d0g9qk1: var(--coosf13s);
    --_1d0g9qk2: var(--coosf13u);
    --_1d0g9qk3: var(--coosf13v);
  }
  ._1jibnumd {
    --_1d0g9qk0: var(--coosf141);
    --_1d0g9qk1: var(--coosf142);
    --_1d0g9qk2: var(--coosf144);
    --_1d0g9qk3: var(--coosf145);
  }
  ._1jibnumg {
    font-size: var(--coosf137);
    line-height: var(--coosf138);
  }
  ._1jibnumh {
    font-size: var(--coosf13h);
    line-height: var(--coosf13i);
  }
  ._1jibnumi {
    font-size: var(--coosf13r);
    line-height: var(--coosf13s);
  }
  ._1jibnumj {
    font-size: var(--coosf141);
    line-height: var(--coosf142);
  }
  ._1jibnumm {
    --_1d0g9qk0: var(--coosf14e);
    --_1d0g9qk1: var(--coosf14f);
    --_1d0g9qk2: var(--coosf14h);
    --_1d0g9qk3: var(--coosf14i);
  }
  ._1jibnump {
    --_1d0g9qk0: var(--coosf14o);
    --_1d0g9qk1: var(--coosf14p);
    --_1d0g9qk2: var(--coosf14r);
    --_1d0g9qk3: var(--coosf14s);
  }
  ._1jibnums {
    --_1d0g9qk0: var(--coosf14y);
    --_1d0g9qk1: var(--coosf14z);
    --_1d0g9qk2: var(--coosf151);
    --_1d0g9qk3: var(--coosf152);
  }
  ._1jibnumv {
    --_1d0g9qk0: var(--coosf158);
    --_1d0g9qk1: var(--coosf159);
    --_1d0g9qk2: var(--coosf15b);
    --_1d0g9qk3: var(--coosf15c);
  }
  ._1jibnum24 {
    padding-bottom: calc((var(--coosf19) - var(--coosf138)) / 2);
    padding-top: calc((var(--coosf19) - var(--coosf138)) / 2);
  }
  ._1jibnum25 {
    padding-bottom: calc((var(--coosf19) - var(--coosf13i)) / 2);
    padding-top: calc((var(--coosf19) - var(--coosf13i)) / 2);
  }
  ._1jibnum26 {
    padding-bottom: calc((var(--coosf19) - var(--coosf13s)) / 2);
    padding-top: calc((var(--coosf19) - var(--coosf13s)) / 2);
  }
  ._1jibnum27 {
    padding-bottom: calc((var(--coosf19) - var(--coosf142)) / 2);
    padding-top: calc((var(--coosf19) - var(--coosf142)) / 2);
  }
}
.fhvdvb0 {
  --coosf10: 24px;
  --coosf11: 4px;
  --coosf12: 8px;
  --coosf13: 12px;
  --coosf14: 20px;
  --coosf15: 32px;
  --coosf16: 48px;
  --coosf17: 96px;
  --coosf18: 120px;
  --coosf19: 44px;
  --coosf1a: 4px;
  --coosf1b: 2px;
  --coosf1c: 4px;
  --coosf1d: 6px;
  --coosf1e: 10px;
  --coosf1f: #e60278;
  --coosf1g: #f8b1dc;
  --coosf1h: #fdc221;
  --coosf1i: #fee384;
  --coosf1j: #b91e1e;
  --coosf1k: #fb999a;
  --coosf1l: #838fa5;
  --coosf1m: rgba(159, 176, 245, 0.7);
  --coosf1n: #4964e9;
  --coosf1o: #9fb0f5;
  --coosf1p: #1d559d;
  --coosf1q: #98c9f1;
  --coosf1r: #2e3849;
  --coosf1t: #d2d7df;
  --coosf1s: #fff;
  --coosf1u: #12784f;
  --coosf1v: #8bdec5;
  --coosf1w: #512eaa;
  --coosf1x: #c6acf5;
  --coosf1y: 1px;
  --coosf1z: 2px;
  --coosf110: 3px;
  --coosf111: 400px;
  --coosf112: 660px;
  --coosf113: 940px;
  --coosf114: 1280px;
  --coosf115: #e60278;
  --coosf116: #f8b1dc;
  --coosf117: #723d02;
  --coosf118: #fee384;
  --coosf119: #b91e1e;
  --coosf11a: #fb999a;
  --coosf11b: #4964e9;
  --coosf11c: #9fb0f5;
  --coosf11d: #1d559d;
  --coosf11e: #98c9f1;
  --coosf11f: #4964e9;
  --coosf11h: #9fb0f5;
  --coosf11g: #4964e9;
  --coosf11i: #512eaa;
  --coosf11j: #c6acf5;
  --coosf11k: #2e3849;
  --coosf11l: #fff;
  --coosf11m: #12784f;
  --coosf11n: #8bdec5;
  --coosf11o: #512eaa;
  --coosf11p: #c6acf5;
  --coosf11q: #f57c00;
  --coosf11r: #5a6881;
  --coosf11s: hsla(0, 0%, 100%, 0.65);
  --coosf11t: #f7f8fb;
  --coosf11u: #0e131b;
  --coosf11v: #0d3880;
  --coosf11w: #e60278;
  --coosf11x: #cd026b;
  --coosf11y: #fd0585;
  --coosf11z: #feeffa;
  --coosf120: #fdd7f3;
  --coosf121: #fde3f6;
  --coosf122: #fdc221;
  --coosf123: #fef8de;
  --coosf124: #b91e1e;
  --coosf125: #a31a1a;
  --coosf126: #db1616;
  --coosf127: #ffe3e2;
  --coosf128: #fef3f3;
  --coosf129: #fcdbdb;
  --coosf12a: #fde7e7;
  --coosf12b: #4964e9;
  --coosf12c: #3251e6;
  --coosf12d: #5975ff;
  --coosf12e: #f4f6fe;
  --coosf12f: #dde3fc;
  --coosf12g: #e8ecfd;
  --coosf12h: #1d559d;
  --coosf12i: #e3f2fb;
  --coosf12j: #2e3849;
  --coosf12k: #242c39;
  --coosf12l: #384459;
  --coosf12m: #eaecf1;
  --coosf12n: #f7f8fb;
  --coosf12o: #e6e9f3;
  --coosf12p: #eff1f7;
  --coosf12q: #12784f;
  --coosf12r: #e2f7f1;
  --coosf12s: #512eaa;
  --coosf12t: #f1e8fd;
  --coosf12u: #fff;
  --coosf12v: #1c2330;
  --coosf12w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --coosf12x: 1456;
  --coosf12y: 1900;
  --coosf12z: -500;
  --coosf130: 0;
  --coosf131: 2048;
  --coosf132: 12px;
  --coosf133: 20px;
  --coosf134: 8.5313px;
  --coosf135: -0.4642em;
  --coosf136: -0.4915em;
  --coosf137: 12px;
  --coosf138: 20px;
  --coosf139: 8.5313px;
  --coosf13a: -0.4642em;
  --coosf13b: -0.4915em;
  --coosf13c: 14px;
  --coosf13d: 20px;
  --coosf13e: 9.9531px;
  --coosf13f: -0.3451em;
  --coosf13g: -0.3725em;
  --coosf13h: 14px;
  --coosf13i: 20px;
  --coosf13j: 9.9531px;
  --coosf13k: -0.3451em;
  --coosf13l: -0.3725em;
  --coosf13m: 16px;
  --coosf13n: 24px;
  --coosf13o: 11.375px;
  --coosf13p: -0.3809em;
  --coosf13q: -0.4082em;
  --coosf13r: 16px;
  --coosf13s: 24px;
  --coosf13t: 11.375px;
  --coosf13u: -0.3809em;
  --coosf13v: -0.4082em;
  --coosf13w: 18px;
  --coosf13x: 28px;
  --coosf13y: 12.7969px;
  --coosf13z: -0.4086em;
  --coosf140: -0.436em;
  --coosf141: 18px;
  --coosf142: 28px;
  --coosf143: 12.7969px;
  --coosf144: -0.4086em;
  --coosf145: -0.436em;
  --coosf146: 400;
  --coosf147: 600;
  --coosf148: 700;
  --coosf149: 28px;
  --coosf14a: 36px;
  --coosf14b: 19.9063px;
  --coosf14c: -0.2737em;
  --coosf14d: -0.3011em;
  --coosf14e: 42px;
  --coosf14f: 44px;
  --coosf14g: 29.8594px;
  --coosf14h: -0.1547em;
  --coosf14i: -0.182em;
  --coosf14j: 21px;
  --coosf14k: 32px;
  --coosf14l: 14.9297px;
  --coosf14m: -0.3928em;
  --coosf14n: -0.4201em;
  --coosf14o: 28px;
  --coosf14p: 36px;
  --coosf14q: 19.9063px;
  --coosf14r: -0.2737em;
  --coosf14s: -0.3011em;
  --coosf14t: 21px;
  --coosf14u: 28px;
  --coosf14v: 14.9297px;
  --coosf14w: -0.2975em;
  --coosf14x: -0.3249em;
  --coosf14y: 21px;
  --coosf14z: 28px;
  --coosf150: 14.9297px;
  --coosf151: -0.2975em;
  --coosf152: -0.3249em;
  --coosf153: 18px;
  --coosf154: 28px;
  --coosf155: 12.7969px;
  --coosf156: -0.4086em;
  --coosf157: -0.436em;
  --coosf158: 18px;
  --coosf159: 28px;
  --coosf15a: 12.7969px;
  --coosf15b: -0.4086em;
  --coosf15c: -0.436em;
  --coosf15d: 400;
  --coosf15e: 600;
  --coosf15f: none;
  --coosf15g: 24px;
  --coosf15h: 20px;
  --coosf15i: transform 0.125s ease, opacity 0.125s ease;
  --coosf15j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --coosf15k: scale(0.95);
  --coosf15l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --coosf15m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --coosf15n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
html:not(.pp1igez) ._1sid1u94 {
  --_1sid1u90: rgba(51, 51, 51, 0.08);
  --_1sid1u91: rgba(51, 51, 51, 0.3);
  --_1sid1u92: rgba(51, 51, 51, 0.4);
  --_1sid1u93: rgba(51, 51, 51, 0.1);
}
html:not(.pp1igez) ._1sid1u95 {
  --_1sid1u90: hsla(0, 0%, 100%, 0.05);
  --_1sid1u91: hsla(0, 0%, 100%, 0.4);
  --_1sid1u92: hsla(0, 0%, 100%, 0.6);
  --_1sid1u93: hsla(0, 0%, 100%, 0.2);
}
html.pp1igez ._1sid1u96 {
  --_1sid1u90: rgba(51, 51, 51, 0.08);
  --_1sid1u91: rgba(51, 51, 51, 0.3);
  --_1sid1u92: rgba(51, 51, 51, 0.4);
  --_1sid1u93: rgba(51, 51, 51, 0.1);
}
html.pp1igez ._1sid1u97 {
  --_1sid1u90: hsla(0, 0%, 100%, 0.05);
  --_1sid1u91: hsla(0, 0%, 100%, 0.4);
  --_1sid1u92: hsla(0, 0%, 100%, 0.6);
  --_1sid1u93: hsla(0, 0%, 100%, 0.2);
}
._1sid1u98 {
  background: var(--_1sid1u90);
  border: 2px solid var(--_1sid1u91);
}
._1sid1u99 {
  color: var(--_1sid1u92);
}
._1sid1u9a {
  stroke-width: 2px;
  stroke: var(--_1sid1u93);
}
.z13qfw0 {
  --coosf10: 24px;
  --coosf11: 4px;
  --coosf12: 8px;
  --coosf13: 12px;
  --coosf14: 20px;
  --coosf15: 32px;
  --coosf16: 48px;
  --coosf17: 96px;
  --coosf18: 120px;
  --coosf19: 48px;
  --coosf1a: 4px;
  --coosf1b: 4px;
  --coosf1c: 6px;
  --coosf1d: 8px;
  --coosf1e: 10px;
  --coosf1f: #111;
  --coosf1g: #9b9b9b;
  --coosf1h: #ffc600;
  --coosf1i: #ffc600;
  --coosf1j: #ef3e4a;
  --coosf1k: #f4727b;
  --coosf1l: #333;
  --coosf1m: #00bfff;
  --coosf1n: #767676;
  --coosf1o: #9b9b9b;
  --coosf1p: #2c88f7;
  --coosf1q: #509df8;
  --coosf1r: #303030;
  --coosf1s: #fff;
  --coosf1t: #777;
  --coosf1u: #00af50;
  --coosf1v: #00b352;
  --coosf1w: #855be5;
  --coosf1x: #a88bec;
  --coosf1y: 1px;
  --coosf1z: 2px;
  --coosf110: 2px;
  --coosf111: 400px;
  --coosf112: 660px;
  --coosf113: 940px;
  --coosf114: 1280px;
  --coosf115: #111;
  --coosf116: #9b9b9b;
  --coosf117: #6d5400;
  --coosf118: #ffc600;
  --coosf119: #cb111d;
  --coosf11a: #f4727b;
  --coosf11b: #767676;
  --coosf11c: #9b9b9b;
  --coosf11d: #0964d1;
  --coosf11e: #509df8;
  --coosf11f: #4c77bb;
  --coosf11g: #4c77bb;
  --coosf11h: #7d9ccf;
  --coosf11j: #d46fff;
  --coosf11i: #9400d3;
  --coosf11k: #303030;
  --coosf11l: #fff;
  --coosf11m: #007f3b;
  --coosf11n: #00b352;
  --coosf11o: #7243e2;
  --coosf11p: #a88bec;
  --coosf11q: #303030;
  --coosf11r: #777;
  --coosf11s: hsla(0, 0%, 100%, 0.65);
  --coosf11t: #f5f5f5;
  --coosf11u: #000;
  --coosf11v: #303030;
  --coosf11w: #111;
  --coosf11x: #040404;
  --coosf11y: #1e1e1e;
  --coosf11z: #ededed;
  --coosf120: #dbdbdb;
  --coosf121: #e7e7e7;
  --coosf122: #ffc600;
  --coosf123: #fcf6e1;
  --coosf124: #ef3e4a;
  --coosf125: #ed2634;
  --coosf126: #f15660;
  --coosf127: #fbe9eb;
  --coosf128: #fdf0f1;
  --coosf129: #fce2e3;
  --coosf12a: #fdebec;
  --coosf12b: #767676;
  --coosf12c: #696969;
  --coosf12d: #838383;
  --coosf12e: #f4f4f4;
  --coosf12f: #eaeaea;
  --coosf12g: #f1f1f1;
  --coosf12h: #2c88f7;
  --coosf12i: #e1e9f2;
  --coosf12j: #333;
  --coosf12k: #262626;
  --coosf12l: #404040;
  --coosf12m: #e5e5e5;
  --coosf12n: #f4f4f4;
  --coosf12o: #e7e7e7;
  --coosf12p: #eee;
  --coosf12q: #00af50;
  --coosf12r: #e5f5ec;
  --coosf12s: #855be5;
  --coosf12t: #e6e1f0;
  --coosf12u: #fff;
  --coosf12v: #222;
  --coosf12w: "Courier New", monospace;
  --coosf12x: 1170;
  --coosf12y: 1705;
  --coosf12z: -615;
  --coosf130: 0;
  --coosf131: 2048;
  --coosf132: 12px;
  --coosf133: 17.8555px;
  --coosf134: 6.8555px;
  --coosf135: -0.4388em;
  --coosf136: -0.4779em;
  --coosf137: 12px;
  --coosf138: 17.8555px;
  --coosf139: 6.8555px;
  --coosf13a: -0.4388em;
  --coosf13b: -0.4779em;
  --coosf13c: 14px;
  --coosf13d: 19.998px;
  --coosf13e: 7.998px;
  --coosf13f: -0.409em;
  --coosf13g: -0.4481em;
  --coosf13h: 14px;
  --coosf13i: 19.998px;
  --coosf13j: 7.998px;
  --coosf13k: -0.409em;
  --coosf13l: -0.4481em;
  --coosf13m: 16px;
  --coosf13n: 23.1406px;
  --coosf13o: 9.1406px;
  --coosf13p: -0.418em;
  --coosf13q: -0.457em;
  --coosf13r: 16px;
  --coosf13s: 23.1406px;
  --coosf13t: 9.1406px;
  --coosf13u: -0.418em;
  --coosf13v: -0.457em;
  --coosf13w: 18px;
  --coosf13x: 26.2832px;
  --coosf13y: 10.2832px;
  --coosf13z: -0.4249em;
  --coosf140: -0.464em;
  --coosf141: 18px;
  --coosf142: 26.2832px;
  --coosf143: 10.2832px;
  --coosf144: -0.4249em;
  --coosf145: -0.464em;
  --coosf146: 400;
  --coosf147: 500;
  --coosf148: 700;
  --coosf149: 28px;
  --coosf14a: 37.9961px;
  --coosf14b: 15.9961px;
  --coosf14c: -0.3733em;
  --coosf14d: -0.4124em;
  --coosf14e: 42px;
  --coosf14f: 45.9941px;
  --coosf14g: 23.9941px;
  --coosf14h: -0.2424em;
  --coosf14i: -0.2814em;
  --coosf14j: 21px;
  --coosf14k: 31.9971px;
  --coosf14l: 11.9971px;
  --coosf14m: -0.4567em;
  --coosf14n: -0.4957em;
  --coosf14o: 28px;
  --coosf14p: 35.9961px;
  --coosf14q: 15.9961px;
  --coosf14r: -0.3376em;
  --coosf14s: -0.3767em;
  --coosf14t: 21px;
  --coosf14u: 29.9971px;
  --coosf14v: 11.9971px;
  --coosf14w: -0.409em;
  --coosf14x: -0.4481em;
  --coosf14y: 21px;
  --coosf14z: 29.9971px;
  --coosf150: 11.9971px;
  --coosf151: -0.409em;
  --coosf152: -0.4481em;
  --coosf153: 18px;
  --coosf154: 26.2832px;
  --coosf155: 10.2832px;
  --coosf156: -0.4249em;
  --coosf157: -0.464em;
  --coosf158: 18px;
  --coosf159: 26.2832px;
  --coosf15a: 10.2832px;
  --coosf15b: -0.4249em;
  --coosf15c: -0.464em;
  --coosf15d: 400;
  --coosf15e: 700;
  --coosf15f: underline;
  --coosf15g: 28px;
  --coosf15h: 20px;
  --coosf15i: transform 0.125s ease, opacity 0.125s ease;
  --coosf15j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --coosf15k: scale(0.97);
  --coosf15l: 0 2px 4px 0px rgba(28, 28, 28, 0.1),
    0 2px 2px -2px rgba(28, 28, 28, 0.1), 0 4px 4px -4px rgba(28, 28, 28, 0.2);
  --coosf15m: 0 2px 4px 0px rgba(28, 28, 28, 0.1),
    0 8px 8px -4px rgba(28, 28, 28, 0.1), 0 12px 12px -8px rgba(28, 28, 28, 0.2);
  --coosf15n: 0 2px 4px 0px rgba(28, 28, 28, 0.1),
    0 12px 12px -4px rgba(28, 28, 28, 0.1),
    0 20px 20px -12px rgba(28, 28, 28, 0.2);
}
[data-braid-hidefocusrings] .c3aszi0 {
  opacity: 0 !important;
}
._11gyv0h1 {
  bottom: calc(var(--coosf12) * -1);
  left: calc(var(--coosf11) * -1);
  right: calc(var(--coosf11) * -1);
  top: calc(var(--coosf12) * -1);
}
._11gyv0h0:focus ~ ._11gyv0h1 {
  opacity: 1;
}
.eyp8t51 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .eyp8t53 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--eyp8t52);
    -webkit-box-orient: vertical;
  }
}
@media print {
  .d4p2zz0 {
    display: none !important;
  }
}
.chbgkm0:first-child > .chbgkm1 {
  padding-top: 0;
}
.chbgkm2 {
  flex: 0 0 50%;
}
.chbgkm3 {
  flex: 0 0 33.33333333333333%;
}
.chbgkm4 {
  flex: 0 0 66.66666666666666%;
}
.chbgkm5 {
  flex: 0 0 25%;
}
.chbgkm6 {
  flex: 0 0 75%;
}
.chbgkm7 {
  flex: 0 0 20%;
}
.chbgkm8 {
  flex: 0 0 40%;
}
.chbgkm9 {
  flex: 0 0 60%;
}
.chbgkma {
  flex: 0 0 80%;
}
._3jathq0:before,
._3jathq1:after {
  content: "";
  display: table;
}
._3jathq2:before {
  margin-bottom: calc(var(--coosf10) * -1);
}
._3jathq3:before {
  margin-bottom: calc(var(--coosf11) * -1);
}
._3jathq4:before {
  margin-bottom: calc(var(--coosf12) * -1);
}
._3jathq5:before {
  margin-bottom: calc(var(--coosf13) * -1);
}
._3jathq6:before {
  margin-bottom: calc(var(--coosf14) * -1);
}
._3jathq7:before {
  margin-bottom: calc(var(--coosf15) * -1);
}
._3jathq8:before {
  margin-bottom: calc(var(--coosf16) * -1);
}
._3jathq9:before {
  margin-bottom: calc(var(--coosf17) * -1);
}
._3jathqa:before {
  margin-bottom: calc(var(--coosf18) * -1);
}
._3jathqb:before {
  margin-bottom: 0;
}
._3jathq16:after {
  margin-top: calc(var(--coosf10) * -1);
}
._3jathq17:after {
  margin-top: calc(var(--coosf11) * -1);
}
._3jathq18:after {
  margin-top: calc(var(--coosf12) * -1);
}
._3jathq19:after {
  margin-top: calc(var(--coosf13) * -1);
}
._3jathq1a:after {
  margin-top: calc(var(--coosf14) * -1);
}
._3jathq1b:after {
  margin-top: calc(var(--coosf15) * -1);
}
._3jathq1c:after {
  margin-top: calc(var(--coosf16) * -1);
}
._3jathq1d:after {
  margin-top: calc(var(--coosf17) * -1);
}
._3jathq1e:after {
  margin-top: calc(var(--coosf18) * -1);
}
._3jathq1f:after {
  margin-top: 0;
}
._3jathq2a {
  margin-left: calc(var(--coosf10) * -1);
}
._3jathq2b {
  margin-left: calc(var(--coosf11) * -1);
}
._3jathq2c {
  margin-left: calc(var(--coosf12) * -1);
}
._3jathq2d {
  margin-left: calc(var(--coosf13) * -1);
}
._3jathq2e {
  margin-left: calc(var(--coosf14) * -1);
}
._3jathq2f {
  margin-left: calc(var(--coosf15) * -1);
}
._3jathq2g {
  margin-left: calc(var(--coosf16) * -1);
}
._3jathq2h {
  margin-left: calc(var(--coosf17) * -1);
}
._3jathq2i {
  margin-left: calc(var(--coosf18) * -1);
}
._3jathq2j {
  margin-left: 0;
}
._3jathq3e {
  margin-right: calc(var(--coosf10) * -1);
}
._3jathq3f {
  margin-right: calc(var(--coosf11) * -1);
}
._3jathq3g {
  margin-right: calc(var(--coosf12) * -1);
}
._3jathq3h {
  margin-right: calc(var(--coosf13) * -1);
}
._3jathq3i {
  margin-right: calc(var(--coosf14) * -1);
}
._3jathq3j {
  margin-right: calc(var(--coosf15) * -1);
}
._3jathq3k {
  margin-right: calc(var(--coosf16) * -1);
}
._3jathq3l {
  margin-right: calc(var(--coosf17) * -1);
}
._3jathq3m {
  margin-right: calc(var(--coosf18) * -1);
}
._3jathq3n {
  margin-right: 0;
}
@media screen and (min-width: 740px) {
  ._3jathqc:before {
    margin-bottom: calc(var(--coosf10) * -1);
  }
  ._3jathqd:before {
    margin-bottom: calc(var(--coosf11) * -1);
  }
  ._3jathqe:before {
    margin-bottom: calc(var(--coosf12) * -1);
  }
  ._3jathqf:before {
    margin-bottom: calc(var(--coosf13) * -1);
  }
  ._3jathqg:before {
    margin-bottom: calc(var(--coosf14) * -1);
  }
  ._3jathqh:before {
    margin-bottom: calc(var(--coosf15) * -1);
  }
  ._3jathqi:before {
    margin-bottom: calc(var(--coosf16) * -1);
  }
  ._3jathqj:before {
    margin-bottom: calc(var(--coosf17) * -1);
  }
  ._3jathqk:before {
    margin-bottom: calc(var(--coosf18) * -1);
  }
  ._3jathql:before {
    margin-bottom: 0;
  }
  ._3jathq1g:after {
    margin-top: calc(var(--coosf10) * -1);
  }
  ._3jathq1h:after {
    margin-top: calc(var(--coosf11) * -1);
  }
  ._3jathq1i:after {
    margin-top: calc(var(--coosf12) * -1);
  }
  ._3jathq1j:after {
    margin-top: calc(var(--coosf13) * -1);
  }
  ._3jathq1k:after {
    margin-top: calc(var(--coosf14) * -1);
  }
  ._3jathq1l:after {
    margin-top: calc(var(--coosf15) * -1);
  }
  ._3jathq1m:after {
    margin-top: calc(var(--coosf16) * -1);
  }
  ._3jathq1n:after {
    margin-top: calc(var(--coosf17) * -1);
  }
  ._3jathq1o:after {
    margin-top: calc(var(--coosf18) * -1);
  }
  ._3jathq1p:after {
    margin-top: 0;
  }
  ._3jathq2k {
    margin-left: calc(var(--coosf10) * -1);
  }
  ._3jathq2l {
    margin-left: calc(var(--coosf11) * -1);
  }
  ._3jathq2m {
    margin-left: calc(var(--coosf12) * -1);
  }
  ._3jathq2n {
    margin-left: calc(var(--coosf13) * -1);
  }
  ._3jathq2o {
    margin-left: calc(var(--coosf14) * -1);
  }
  ._3jathq2p {
    margin-left: calc(var(--coosf15) * -1);
  }
  ._3jathq2q {
    margin-left: calc(var(--coosf16) * -1);
  }
  ._3jathq2r {
    margin-left: calc(var(--coosf17) * -1);
  }
  ._3jathq2s {
    margin-left: calc(var(--coosf18) * -1);
  }
  ._3jathq2t {
    margin-left: 0;
  }
  ._3jathq3o {
    margin-right: calc(var(--coosf10) * -1);
  }
  ._3jathq3p {
    margin-right: calc(var(--coosf11) * -1);
  }
  ._3jathq3q {
    margin-right: calc(var(--coosf12) * -1);
  }
  ._3jathq3r {
    margin-right: calc(var(--coosf13) * -1);
  }
  ._3jathq3s {
    margin-right: calc(var(--coosf14) * -1);
  }
  ._3jathq3t {
    margin-right: calc(var(--coosf15) * -1);
  }
  ._3jathq3u {
    margin-right: calc(var(--coosf16) * -1);
  }
  ._3jathq3v {
    margin-right: calc(var(--coosf17) * -1);
  }
  ._3jathq3w {
    margin-right: calc(var(--coosf18) * -1);
  }
  ._3jathq3x {
    margin-right: 0;
  }
}
@media screen and (min-width: 992px) {
  ._3jathqm:before {
    margin-bottom: calc(var(--coosf10) * -1);
  }
  ._3jathqn:before {
    margin-bottom: calc(var(--coosf11) * -1);
  }
  ._3jathqo:before {
    margin-bottom: calc(var(--coosf12) * -1);
  }
  ._3jathqp:before {
    margin-bottom: calc(var(--coosf13) * -1);
  }
  ._3jathqq:before {
    margin-bottom: calc(var(--coosf14) * -1);
  }
  ._3jathqr:before {
    margin-bottom: calc(var(--coosf15) * -1);
  }
  ._3jathqs:before {
    margin-bottom: calc(var(--coosf16) * -1);
  }
  ._3jathqt:before {
    margin-bottom: calc(var(--coosf17) * -1);
  }
  ._3jathqu:before {
    margin-bottom: calc(var(--coosf18) * -1);
  }
  ._3jathqv:before {
    margin-bottom: 0;
  }
  ._3jathq1q:after {
    margin-top: calc(var(--coosf10) * -1);
  }
  ._3jathq1r:after {
    margin-top: calc(var(--coosf11) * -1);
  }
  ._3jathq1s:after {
    margin-top: calc(var(--coosf12) * -1);
  }
  ._3jathq1t:after {
    margin-top: calc(var(--coosf13) * -1);
  }
  ._3jathq1u:after {
    margin-top: calc(var(--coosf14) * -1);
  }
  ._3jathq1v:after {
    margin-top: calc(var(--coosf15) * -1);
  }
  ._3jathq1w:after {
    margin-top: calc(var(--coosf16) * -1);
  }
  ._3jathq1x:after {
    margin-top: calc(var(--coosf17) * -1);
  }
  ._3jathq1y:after {
    margin-top: calc(var(--coosf18) * -1);
  }
  ._3jathq1z:after {
    margin-top: 0;
  }
  ._3jathq2u {
    margin-left: calc(var(--coosf10) * -1);
  }
  ._3jathq2v {
    margin-left: calc(var(--coosf11) * -1);
  }
  ._3jathq2w {
    margin-left: calc(var(--coosf12) * -1);
  }
  ._3jathq2x {
    margin-left: calc(var(--coosf13) * -1);
  }
  ._3jathq2y {
    margin-left: calc(var(--coosf14) * -1);
  }
  ._3jathq2z {
    margin-left: calc(var(--coosf15) * -1);
  }
  ._3jathq30 {
    margin-left: calc(var(--coosf16) * -1);
  }
  ._3jathq31 {
    margin-left: calc(var(--coosf17) * -1);
  }
  ._3jathq32 {
    margin-left: calc(var(--coosf18) * -1);
  }
  ._3jathq33 {
    margin-left: 0;
  }
  ._3jathq3y {
    margin-right: calc(var(--coosf10) * -1);
  }
  ._3jathq3z {
    margin-right: calc(var(--coosf11) * -1);
  }
  ._3jathq40 {
    margin-right: calc(var(--coosf12) * -1);
  }
  ._3jathq41 {
    margin-right: calc(var(--coosf13) * -1);
  }
  ._3jathq42 {
    margin-right: calc(var(--coosf14) * -1);
  }
  ._3jathq43 {
    margin-right: calc(var(--coosf15) * -1);
  }
  ._3jathq44 {
    margin-right: calc(var(--coosf16) * -1);
  }
  ._3jathq45 {
    margin-right: calc(var(--coosf17) * -1);
  }
  ._3jathq46 {
    margin-right: calc(var(--coosf18) * -1);
  }
  ._3jathq47 {
    margin-right: 0;
  }
}
@media screen and (min-width: 1200px) {
  ._3jathqw:before {
    margin-bottom: calc(var(--coosf10) * -1);
  }
  ._3jathqx:before {
    margin-bottom: calc(var(--coosf11) * -1);
  }
  ._3jathqy:before {
    margin-bottom: calc(var(--coosf12) * -1);
  }
  ._3jathqz:before {
    margin-bottom: calc(var(--coosf13) * -1);
  }
  ._3jathq10:before {
    margin-bottom: calc(var(--coosf14) * -1);
  }
  ._3jathq11:before {
    margin-bottom: calc(var(--coosf15) * -1);
  }
  ._3jathq12:before {
    margin-bottom: calc(var(--coosf16) * -1);
  }
  ._3jathq13:before {
    margin-bottom: calc(var(--coosf17) * -1);
  }
  ._3jathq14:before {
    margin-bottom: calc(var(--coosf18) * -1);
  }
  ._3jathq15:before {
    margin-bottom: 0;
  }
  ._3jathq20:after {
    margin-top: calc(var(--coosf10) * -1);
  }
  ._3jathq21:after {
    margin-top: calc(var(--coosf11) * -1);
  }
  ._3jathq22:after {
    margin-top: calc(var(--coosf12) * -1);
  }
  ._3jathq23:after {
    margin-top: calc(var(--coosf13) * -1);
  }
  ._3jathq24:after {
    margin-top: calc(var(--coosf14) * -1);
  }
  ._3jathq25:after {
    margin-top: calc(var(--coosf15) * -1);
  }
  ._3jathq26:after {
    margin-top: calc(var(--coosf16) * -1);
  }
  ._3jathq27:after {
    margin-top: calc(var(--coosf17) * -1);
  }
  ._3jathq28:after {
    margin-top: calc(var(--coosf18) * -1);
  }
  ._3jathq29:after {
    margin-top: 0;
  }
  ._3jathq34 {
    margin-left: calc(var(--coosf10) * -1);
  }
  ._3jathq35 {
    margin-left: calc(var(--coosf11) * -1);
  }
  ._3jathq36 {
    margin-left: calc(var(--coosf12) * -1);
  }
  ._3jathq37 {
    margin-left: calc(var(--coosf13) * -1);
  }
  ._3jathq38 {
    margin-left: calc(var(--coosf14) * -1);
  }
  ._3jathq39 {
    margin-left: calc(var(--coosf15) * -1);
  }
  ._3jathq3a {
    margin-left: calc(var(--coosf16) * -1);
  }
  ._3jathq3b {
    margin-left: calc(var(--coosf17) * -1);
  }
  ._3jathq3c {
    margin-left: calc(var(--coosf18) * -1);
  }
  ._3jathq3d {
    margin-left: 0;
  }
  ._3jathq48 {
    margin-right: calc(var(--coosf10) * -1);
  }
  ._3jathq49 {
    margin-right: calc(var(--coosf11) * -1);
  }
  ._3jathq4a {
    margin-right: calc(var(--coosf12) * -1);
  }
  ._3jathq4b {
    margin-right: calc(var(--coosf13) * -1);
  }
  ._3jathq4c {
    margin-right: calc(var(--coosf14) * -1);
  }
  ._3jathq4d {
    margin-right: calc(var(--coosf15) * -1);
  }
  ._3jathq4e {
    margin-right: calc(var(--coosf16) * -1);
  }
  ._3jathq4f {
    margin-right: calc(var(--coosf17) * -1);
  }
  ._3jathq4g {
    margin-right: calc(var(--coosf18) * -1);
  }
  ._3jathq4h {
    margin-right: 0;
  }
}
.znk32y0 {
  height: var(--coosf133);
}
.znk32y1 {
  height: var(--coosf13d);
}
.znk32y2 {
  height: var(--coosf13n);
}
.znk32y3 {
  height: var(--coosf13x);
}
@media screen and (min-width: 740px) {
  .znk32y0 {
    height: var(--coosf138);
  }
  .znk32y1 {
    height: var(--coosf13i);
  }
  .znk32y2 {
    height: var(--coosf13s);
  }
  .znk32y3 {
    height: var(--coosf142);
  }
}
._1gk33xg0 {
  height: 1.2em;
  width: 1.2em;
}
._1gk33xg1 {
  margin: -0.1em;
}
._1gk33xg2 {
  margin-bottom: -0.2em;
  margin-top: -0.2em;
}
._1gk33xg3 {
  vertical-align: middle;
}
._1gk33xg4 {
  top: -0.105em;
}
._1gk33xg5 {
  top: -0.16499999999999998em;
}
._1gk33xg6 {
  top: -0.045em;
}
._1gk33xg7 {
  top: -0.065em;
}
._1gk33xg8 {
  top: -0.125em;
}
._1gk33xg9 {
  top: -0.0050000000000000044em;
}
._1gk33xga {
  width: var(--coosf133);
}
._1gk33xgb {
  width: var(--coosf13d);
}
._1gk33xgc {
  width: var(--coosf13n);
}
._1gk33xgd {
  width: var(--coosf13x);
}
@media screen and (min-width: 740px) {
  ._1gk33xga {
    width: var(--coosf138);
  }
  ._1gk33xgb {
    width: var(--coosf13i);
  }
  ._1gk33xgc {
    width: var(--coosf13s);
  }
  ._1gk33xgd {
    width: var(--coosf142);
  }
}
@keyframes _105alwca {
  14% {
    opacity: 0;
  }
  15%,
  to {
    opacity: 1;
  }
}
@keyframes _105alwcb {
  29% {
    opacity: 0;
  }
  30%,
  to {
    opacity: 1;
  }
}
@keyframes _105alwcc {
  44% {
    opacity: 0;
  }
  45%,
  to {
    opacity: 1;
  }
}
._105alwc0 {
  text-decoration: none;
}
._105alwc0:active ._105alwc2,
._105alwc0:focus ._105alwc4,
._105alwc0:hover:not(:disabled) ._105alwc3,
._105alwc1._105alwc2 {
  opacity: 1;
}
._105alwc6 {
  --_105alwc5: calc((var(--coosf19) - var(--coosf13o)) / 2);
}
._105alwc7 {
  --_105alwc5: calc(((var(--coosf19) * 0.8) - var(--coosf13e)) / 2);
}
._105alwc8 {
  margin-bottom: calc(var(--_105alwc5) * -1);
  margin-top: calc(var(--_105alwc5) * -1);
}
._105alwc9 {
  padding-bottom: var(--_105alwc5);
  padding-top: var(--_105alwc5);
}
._105alwcd {
  animation-duration: 1s;
  animation-iteration-count: infinite;
  opacity: 0;
}
._105alwcd:first-child {
  animation-name: _105alwca;
}
._105alwcd:nth-child(2) {
  animation-name: _105alwcb;
}
._105alwcd:nth-child(3) {
  animation-name: _105alwcc;
}
html:not(.pp1igez) ._105alwce {
  background: hsla(0, 0%, 100%, 0.1);
}
html:not(.pp1igez) ._105alwcf,
html:not(.pp1igez) ._105alwcg {
  background: hsla(0, 0%, 100%, 0.15);
}
html.pp1igez ._105alwch {
  background: hsla(0, 0%, 100%, 0.1);
}
html.pp1igez ._105alwci,
html.pp1igez ._105alwcj {
  background: hsla(0, 0%, 100%, 0.15);
}
@media screen and (min-width: 740px) {
  ._105alwc6 {
    --_105alwc5: calc((var(--coosf19) - var(--coosf13t)) / 2);
  }
  ._105alwc7 {
    --_105alwc5: calc(((var(--coosf19) * 0.8) - var(--coosf13j)) / 2);
  }
}
.huypy30 {
  white-space: nowrap;
}
.xucqnw0 {
  position: relative;
}
.xucqnw0:after {
  content: "";
  height: 100%;
  left: -10px;
  min-height: 44px;
  min-width: 44px;
  position: absolute;
  right: -10px;
  top: 50%;
  transform: translateY(-50%);
}
.xucqnw1:after {
  left: 0 !important;
  right: 0 !important;
}
.y1jixr6 {
  background: var(--y1jixr0);
}
.y1jixr7 {
  background: var(--y1jixr1);
}
.y1jixr8 {
  background: var(--y1jixr2);
}
.y1jixr9 {
  background: var(--y1jixr3);
}
.y1jixra {
  background: var(--y1jixr4);
}
.y1jixrb {
  background: var(--y1jixr5);
}
html:not(.pp1igez) .y1jixrc {
  --y1jixr0: var(--coosf1w);
  --y1jixr1: var(--coosf1p);
  --y1jixr2: var(--coosf1u);
  --y1jixr3: var(--coosf1h);
  --y1jixr4: var(--coosf1j);
  --y1jixr5: var(--coosf1n);
}
html:not(.pp1igez) .y1jixrd {
  --y1jixr0: var(--coosf1x);
  --y1jixr1: var(--coosf1q);
  --y1jixr2: var(--coosf1v);
  --y1jixr3: var(--coosf1i);
  --y1jixr4: var(--coosf1k);
  --y1jixr5: var(--coosf1o);
}
html.pp1igez .y1jixre {
  --y1jixr0: var(--coosf1w);
  --y1jixr1: var(--coosf1p);
  --y1jixr2: var(--coosf1u);
  --y1jixr3: var(--coosf1h);
  --y1jixr4: var(--coosf1j);
  --y1jixr5: var(--coosf1n);
}
html.pp1igez .y1jixrf {
  --y1jixr0: var(--coosf1x);
  --y1jixr1: var(--coosf1q);
  --y1jixr2: var(--coosf1v);
  --y1jixr3: var(--coosf1i);
  --y1jixr4: var(--coosf1k);
  --y1jixr5: var(--coosf1o);
}
.y1jixrg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.y1jixrh {
  width: var(--coosf1e);
}
.y1jixri {
  width: var(--coosf1a);
}
.ysjngt2 {
  --ysjngt0: var(--coosf15g);
  --ysjngt1: var(--coosf13o);
}
.ysjngt3 {
  --ysjngt0: var(--coosf15h);
  --ysjngt1: var(--coosf13e);
}
.ysjngt4 {
  height: 44px;
  left: calc(((44px - var(--ysjngt0)) / 2) * -1);
  top: calc(((44px - var(--ysjngt0)) / 2) * -1);
  width: 44px;
}
.ysjngt5 {
  height: var(--ysjngt0);
  width: var(--ysjngt0);
}
.ysjngt4[type="checkbox"]:checked ~ .ysjngt5 {
  background: transparent;
}
.ysjngt6 {
  padding-top: calc((var(--ysjngt0) - var(--ysjngt1)) / 2);
}
.ysjngt4.ysjngt7 ~ * .ysjngt8,
.ysjngt4:checked ~ * .ysjngt8 {
  display: block;
  z-index: 1;
}
.ysjngt4.ysjngt7 + .ysjngt5 > .ysjngt9,
.ysjngt4:checked + .ysjngt5 > .ysjngt9 {
  opacity: 1;
}
html:not(.pp1igez) .ysjngta {
  opacity: 0;
}
.ysjngt4:focus + .ysjngt5 > .ysjngtb,
.ysjngt4:focus:not(.ysjngt7) + .ysjngt5 > .ysjngtc,
.ysjngt4:hover:not(:checked):not(.ysjngt7):not(:disabled)
  + .ysjngt5
  > .ysjngtc {
  opacity: 1;
}
.ysjngtc > .ysjngtd {
  opacity: 0.2;
}
.ysjngte {
  transform: scale(0.85);
}
.ysjngt4:active + .ysjngt5 > * > .ysjngte {
  transform: scale(0.75);
}
.ysjngtf {
  transform: scale(0.6);
}
.ysjngt4:active + .ysjngt5 > * > .ysjngtf {
  transform: scale(0.5);
}
@media screen and (min-width: 740px) {
  .ysjngt2 {
    --ysjngt1: var(--coosf13t);
  }
  .ysjngt3 {
    --ysjngt1: var(--coosf13j);
  }
}
._15qqvs40::-webkit-calendar-picker-indicator,
._15qqvs40::-webkit-clear-button,
._15qqvs40::-webkit-inner-spin-button {
  -webkit-appearance: none;
  display: none;
}
._5i0h6b0 {
  height: var(--coosf1y);
}
._5i0h6b3 {
  background: var(--_5i0h6b1);
}
._5i0h6b4 {
  background: var(--_5i0h6b2);
}
html:not(.pp1igez) ._5i0h6b5 {
  --_5i0h6b1: var(--coosf1t);
  --_5i0h6b2: var(--coosf1r);
}
html:not(.pp1igez) ._5i0h6b6 {
  --_5i0h6b1: var(--coosf1r);
  --_5i0h6b2: var(--coosf1t);
}
html.pp1igez ._5i0h6b7 {
  --_5i0h6b1: var(--coosf1t);
  --_5i0h6b2: var(--coosf1r);
}
html.pp1igez ._5i0h6b8 {
  --_5i0h6b1: var(--coosf1r);
  --_5i0h6b2: var(--coosf1t);
}
._136cciz1::-webkit-input-placeholder {
  color: var(--coosf11r);
}
._136cciz1::-ms-input-placeholder {
  color: var(--coosf11r);
}
._136cciz1::placeholder {
  color: var(--coosf11r);
}
._136cciz2 {
  padding-right: var(--coosf19);
}
._136cciz3 {
  padding-left: calc(var(--coosf19) - 2px);
}
html:not(.pp1igez) ._136cciz4 {
  opacity: 0;
}
._136cciz0:focus ~ ._136cciz5,
._136cciz0:focus ~ ._136cciz6,
._136cciz0:hover:not(:disabled) ~ ._136cciz6 {
  opacity: 1;
}
._136cciz7 {
  background: var(--coosf1l);
  opacity: 0.4;
  width: var(--coosf1y);
}
._1i8gjfc0 {
  padding-right: var(--coosf19);
}
._1iim3v80 {
  transform-origin: 50% 50%;
  transition: transform 0.3s ease;
}
._1iim3v81 {
  transform: rotate(90deg);
}
._1iim3v82 {
  transform: rotate(180deg);
}
._1iim3v83 {
  transform: rotate(270deg);
}
._138tayy0::-moz-focus-inner {
  border: 0;
}
.ok34xp0 {
  background: #000;
  height: 100vh;
  width: 100vw;
}
.ok34xp1 {
  opacity: 0.4;
}
.ok34xp2 {
  max-height: calc((var(--coosf19) * 6) + var(--coosf11));
  overflow-y: auto;
}
.ok34xp3 {
  text-transform: uppercase;
}
@media screen and (min-width: 740px) {
  .ok34xp2 {
    max-height: calc((var(--coosf19) * 8) + var(--coosf11));
  }
}
._12005xo0:hover {
  z-index: 1;
}
._12005xo0::-moz-focus-inner {
  border: 0;
}
._5esfgf0 {
  max-width: 260px;
}
._5esfgf1 {
  transform: translateZ(0) translateY(4px);
}
[data-popper-placement^="bottom"] ._5esfgf1 {
  transform: translateZ(0) translateY(-4px);
}
._5esfgf2 {
  transform: translateZ(0);
}
._5esfgf3 {
  visibility: hidden;
}
._5esfgf3:before {
  content: "";
  transform: rotate(45deg);
  visibility: visible;
}
._5esfgf3,
._5esfgf3:before {
  background: inherit;
  border-radius: var(--coosf1b);
  height: calc(12px + (var(--coosf1b) * 2));
  position: absolute;
  width: calc(12px + (var(--coosf1b) * 2));
}
[data-popper-placement^="top"] ._5esfgf3 {
  bottom: calc((12px / 2) * -1);
}
[data-popper-placement^="bottom"] ._5esfgf3 {
  top: calc((12px / 2) * -1);
}
[data-popper-placement^="left"] ._5esfgf3 {
  right: calc((12px / 2) * -1);
}
[data-popper-placement^="right"] ._5esfgf3 {
  left: calc((12px / 2) * -1);
}
._9r7e6f0::-moz-focus-inner {
  border: 0;
}
._9r7e6f1 {
  margin-left: -2px;
}
._9r7e6f0:hover ._9r7e6f2 {
  opacity: 1;
}
._9r7e6f3 {
  white-space: nowrap;
}
._9r7e6f4 {
  -webkit-overflow-scrolling: touch;
  overflow-x: auto;
  overflow-y: hidden;
  scrollbar-width: none;
  -ms-overflow-style: none;
}
._9r7e6f4::-webkit-scrollbar {
  height: 0;
  width: 0;
}
._9r7e6f5 {
  -webkit-mask-image: linear-gradient(
    90deg,
    #000,
    #000 calc(100% - 80px),
    transparent
  );
  mask-image: linear-gradient(90deg, #000, #000 calc(100% - 80px), transparent);
}
._9r7e6f6 {
  margin-left: auto;
  margin-right: auto;
}
._9r7e6f7 {
  margin: var(--coosf1z);
}
._9r7e6f0:focus ._9r7e6f7 {
  opacity: 1;
}
._9r7e6fa {
  height: var(--coosf1z);
  transform: translateZ(0) translateX(calc(var(--_9r7e6f8) * 1px))
    scaleX(calc(var(--_9r7e6f9) / 10));
  transform-origin: 0 0;
  transition: transform 0.3s ease;
  width: 10px;
}
html.pp1igez ._9r7e6fb {
  background: var(--coosf1o);
}
._9r7e6fc:focus > ._9r7e6fd {
  opacity: 1;
}
._9r7e6fe {
  height: var(--coosf1y);
}
._1wo3wfy0 {
  height: 1px;
  width: 1px;
  clip: rect(1px, 1px, 1px, 1px);
  white-space: nowrap;
}
html.pp1igez .ty5lst2,
html:not(.pp1igez) .ty5lst1 {
  opacity: 0.3;
}
.ty5lst3 {
  opacity: 0.075;
}
.ty5lst0:hover .ty5lst4:not(.ty5lst3) {
  opacity: 0.5;
}
._1r6f9540 {
  background: transparent;
  min-height: calc(var(--coosf1a) * 15);
  resize: vertical;
}
._1r6f9541 {
  color: transparent !important;
  white-space: pre-wrap;
  word-break: break-word;
}
._1r6f9541:after {
  content: "\\A";
}
._1m4vq951 {
  margin: 0 -2px;
  padding: 0 2px;
  text-decoration: underline;
  -webkit-text-decoration-skip-ink: none;
  text-decoration-skip-ink: none;
  -webkit-text-decoration-style: wavy;
  text-decoration-style: wavy;
  text-decoration-thickness: 2px;
  text-underline-offset: 2px;
}
html:not(.pp1igez) ._1m4vq952 {
  background: var(--coosf127);
  -webkit-text-decoration-color: var(--coosf1j);
  text-decoration-color: var(--coosf1j);
}
html.pp1igez ._1m4vq952 {
  -webkit-text-decoration-color: var(--coosf1k);
  text-decoration-color: var(--coosf1k);
}
._1m4vq953 {
  -webkit-text-decoration-color: var(--coosf1h);
  text-decoration-color: var(--coosf1h);
}
html:not(.pp1igez) ._1m4vq953 {
  background: var(--coosf123);
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-is.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__pp1igez,html.sprinkles_darkMode__pp1igez body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__fhvdvb0 typography_lightModeTone_light__1jibnum18 typography_darkModeTone_dark__1jibnum1b">
+        <div class="reset_base__p93oyg0 sprinkles_paddingBottom_gutter_mobile__pp1ige7i sprinkles_paddingTop_gutter_mobile__pp1ige6e sprinkles_paddingLeft_gutter_mobile__pp1ige9q sprinkles_paddingRight_gutter_mobile__pp1ige8m sprinkles_position_relative_mobile__pp1ige5e typography_lightModeTone_light__1jibnum18 typography_darkModeTone_dark__1jibnum1b sprinkles_background_surface_lightMode__pp1ige32 sprinkles_background_surfaceDark_darkMode__pp1ige35">
+          <span class="reset_base__p93oyg0 sprinkles_display_block_mobile__pp1ige4y typography_fontFamily__1jibnum0 typography_fontWeight_regular__1jibnum1 typography_tone_neutral__1jibnum21 capsize_capsizeStyle__1d0g9qk4 typography_textSize_large__1jibnumd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
